Navbar fix overflow mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -154,7 +154,7 @@
     height: 100%;
     width: 100%;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     /* -webkit-box-shadow: 0 0 5px 1px #ddd;
             box-shadow: 0 0 5px 1px #ddd; */
     /* background-color: #fafafa; */
@@ -251,7 +251,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    height: 100%;
+    height: fit-content;
     width: 100%;
   }
   nav ul ul {
